Bug 361867: The description for the 'allowbugdeletion' parameter should not say deleting versions can delete bugs - Patch by victory(_RSZ_) <bmo2007@rsz.jp> r=LpSolit a=justdave

--- a/webtools/bugzilla/template/en/default/admin/params/admin.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/params/admin.html.tmpl
@@ -25,9 +25,9 @@
 %]
 
 [% param_descs = {
-  allowbugdeletion => "The pages to edit products and components and versions can delete " _
-                      "all associated $terms.bugs when you delete a product (or component or " _
-                      "version). Since that is a pretty scary idea, you have to turn on " _
+  allowbugdeletion => "The pages to edit products and components can delete all " _
+                      "associated $terms.bugs when you delete a product (or component). " _
+                      "Since that is a pretty scary idea, you have to turn on " _
                       "this option before any such deletions will ever happen.",
 
   allowemailchange => "Users can change their own email address through the preferences. " _
