--- a/webtools/bugzilla/template/en/default/global/user-error.html.tmpl
+++ b/webtools/bugzilla/template/en/default/global/user-error.html.tmpl
@@ -504,7 +504,7 @@
     You asked [% requestee.identity FILTER html %]
     for <code>[% flag_type.name FILTER html %]</code> on [% terms.bug %] 
     [%+ bug_id FILTER html -%]
-    [% IF attach_id > 0 %], attachment [% attach_id FILTER html %][% END %],
+    [% IF attach_id && attach_id > 0 %], attachment [% attach_id FILTER html %][% END %],
     but that [% terms.bug %] has been restricted to users in certain groups, 
     and the user you asked isn't in all the groups to which 
     the [% terms.bug %] has been restricted.
