Tag url's are too long. Use search terms instead.

--- a/webtools/testopia/template/en/default/testopia/search/variables.none.tmpl
+++ b/webtools/testopia/template/en/default/testopia/search/variables.none.tmpl
@@ -36,6 +36,7 @@
   { id => "notregexp", name => "doesn't match regexp" } ]  %]
   
 [% tag_variants = [
-  { id => "allwords", name => "contains all of the tags" },
-  { id => "anywords", name => "contains any of the tags" },
-  { id => "nowords",  name => "contains none of the tags" } ] %]
+  { id => "anyexact", name => "is tagged with" },
+  { id => "allwords", name => "contains all of the words" },
+  { id => "anywords", name => "contains any of the words" },
+  { id => "nowords",  name => "contains none of the words" } ] %]
