Some error messages were being displayed before the headers were printed.

--- a/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
@@ -75,7 +75,7 @@
                 document.getElementById("addComp").disabled = false;
                 document.getElementById("deleteComp").disabled = false;
                 },
-            error:   function(type, error){ alert("ERROR");},
+            error:   function(type, error){ alert(error.message);},
             mimetype: "text/json"
         });
     }
