--- a/webtools/testopia/template/en/default/testopia/caserun/short-form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/short-form.html.tmpl
@@ -118,12 +118,8 @@
         <div class="cc_i">
           <a href="enter_bug.cgi?product=[% caserun.run.plan.product.name FILTER url_quote %]&caserun_id=[% caserun.id FILTER none %]&version=[% caserun.run.plan.product_version FILTER url_quote %]&component=[% caserun.case.components.0.name FILTER url_quote %]&short_desc=Test%20Case%20[% caserun.case.id FILTER none %]%20-%20[% caserun.case.summary FILTER url_quote %]&comment=STATUS:%20[% caserun.status %]%0D%0ABUILD:%20[% caserun.build.name FILTER url_quote %]%0D%0AENVIRONMENT:%20[% caserun.environment.name FILTER url_quote %]%0D%0ANOTES:%20[% caserun.notes FILTER url_quote %]%0D%0A&assigned_to=[% caserun.case.components.0.default_assignee.login FILTER url_quote %]&qa_contact=[% caserun.case.components.0.default_qa_contact.login FILTER url_quote %]" target="_blank"><img src="testopia/img/snew.gif" alt="Log a New Bug" title="Log a New Bug" style="vertical-align:text-bottom;" /></a>&nbsp;
         </div>
-        <div style="float:left;"><input type="text" size="6" value="" id="mbg[% index %]" [% enabled %]
-        [% IF caserun.canedit %]
-        onkeyup="edt_attch([% index %]);"
-        [% END %]
-        /></div>
-        <div class="cc_i"><input type="button" value="Attach Bug" id="sk[% index %]" disabled="true" onclick="attch([% index %], [% caserun.id FILTER none %], document.getElementById('mbg[% index %]').value);"/></div>
+        <div style="float:left;"><input type="text" size="6" value="" id="mbg[% index %]" [% enabled %]/></div>
+        <div class="cc_i"><input type="button" value="Attach Bug" id="sk[% index %]" onclick="attch([% index %], [% caserun.id FILTER none %], document.getElementById('mbg[% index %]').value);"/></div>
   [%##### Assignee #####%]
         <div class="cc_i"><input value="[% user.login FILTER html %]" id="assignee_[% index %]" /><input type="button" value="Assign" onclick="chOwn([% index %], [% caserun.id FILTER none %], document.getElementById('assignee_[% index %]').value)">
         <a href="javascript:userLookup('document.Create.assigned_to', document.Create.assigned_to.value);">
