Allow user to add a new case to a list of runs or an existing case from within show_case

--- a/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/form.html.tmpl
@@ -97,7 +97,9 @@
       <td align="right"><b>Arguments:</b></td>
       <td><input name="arguments" id="arguments" value="[% case.arguments FILTER none %]"></td>
     </tr>
-  
+    <tr>
+      <th align="right">Add to Runs</th><td colspan="3"><input name="addruns" size="30"></td>
+    </tr>  
   </table> 
  </td>
 [% IF action == "Add" %]
