Changes to cloning. Now you can keep the author or choose yourself. Also cloning plans between products and runs between plans.

--- a/webtools/testopia/template/en/default/testopia/case/clone.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/clone.html.tmpl
@@ -66,6 +66,12 @@
       <td align="left">(comma-separated list of plan IDs)</td>
     </tr>
     <tr>
+      <td valign="TOP" align="RIGHT">Maintain Case Author:</td>
+      <td><input type="radio" name="keepauthor" value="1" checked />Yes <input
+        type="radio" name="keepauthor" value="0" />No, make me the author of the new case.</td>
+    </tr>
+    
+    <tr>
       <td align="right">Copy Document</td>
       <td><input type="radio" name="copy_doc" value="1" checked="checked">Yes <input type="radio" name="copy_doc" value="0">No</td>
     </tr>
